# dacle-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
dacle_core/analysis/: __init__.py  backtest_direction.py  binary_context.py  bottom_detector.py  brief_priority_scorer.py  candlestick_detector.py  capital_rotation_detector.py  confluence_counter.py  direction_accuracy.py  direction_history.py  exhaustion_calculator.py  historical_analyzer.py  institutional_flow.py  manipulation_detector.py  market_direction_cache.py  market_direction_scorer.py  market_structure.py  momentum_indicators.py  price_action_analyzer.py  smart_level_generator.py  support_resistance_detector.py  swing_analyzer.py  technical_pattern_detector.py  technical_patterns.py
dacle_core/bot/: __init__.py
dacle_core/data/: cipher_cache_service.py  data_integrity.py  economic_calendar.py  exchange_listing_verifier.py  fdv_estimator.py  fundraising_tracker.py  macro_cache_service.py  macro_indicators.py  power_law_cache_service.py  realtime_price_cache.py  sector_mapping.py  sherlock_macro_loader.py  ta_enrichment.py  tge_snapshot_archiver.py  token_lookup.py  websocket_price_stream.py
dacle_core/execution/: __init__.py  blofin_bridge.py  reconciliation.py  state_manager.py
dacle_core/governance/: aoat.py  bayesian_calibration.py  gap_protection.py  kill_switch.py  lighter_bridge.py  override.py  polymarket_bridge.py  position_limits.py  sovereign.py  swing_bridge.py
dacle_core/monitoring/: heartbeat_discord.py
dacle_core/ta/: __init__.py  cipher_engine.py  computed_ta_builder.py  discovery_ta.py  outcome_tracker.py
dacle_core/trading_shared/: allocator.py  base.py  cex_lead.py  contracts.py  drift_telemetry.py  intent_logger.py  realtime_risk_ledger.py  risk_ledger.py  silo_guard.py  unified_allocator.py
dacle_core/utils/: __init__.py  api_cost_guard.py  atomic_state.py  atomic_write.py  btc_cache.py  config_helper.py  exception_handler.py  feature_cache.py  graceful_degradation.py  lifecycle_id.py  lifecycle_store.py  llm_cache.py  logging_setup.py  network.py  network_resilience.py  path_access.py  path_setup.py  phase2_phase3_enhancements.py  rate_limiter.py  redis_cache.py  redis_lms.py  request_batcher.py  runtime_api.py  sentry_config.py  severity.py  structured_logging.py  tge_output.py
src/analysis/: CLAUDE.md  __init__.py  advanced_entry_analyzer.py  bottom_detector.py  candlestick_detector.py  capital_rotation_detector.py  confluence_counter.py  derivatives_analyzer.py  direction_accuracy.py  direction_history.py  entry_checklist.py  exhaustion_calculator.py  historical_analyzer.py  macro_sr_checker.py  manipulation_detector.py  market_direction_cache.py  market_direction_scorer.py  market_structure.py  market_structure_analyzer.py  momentum_indicators.py  mtf_ema_average.py  price_action_analyzer.py  signal_accuracy_tracker.py  sl_tp_calculator.py  support_resistance_detector.py  swing_analyzer.py  ta_aggregator.py  technical_pattern_detector.py  technical_patterns.py  volume_profile.py
src/bot/: clean_on_message.txt  dacle_bot.py  dacle_bot_on_message_patch.txt  health.py  runtime_routing.py  validation.py
src/data/: CLAUDE.md  blofin_trade_sync.py  cipher_cache_service.py  data_consolidator.py  data_integrity.py  economic_calendar.py  exchange_listing_verifier.py  exchange_selector.py  fdv_estimator.py  fetch_token_price_interactive.py  fundraising_tracker.py  indices_ohlcv_fetcher.py  indices_tracker.py  macro_cache_service.py  macro_indicators.py  market_regime_detector.py  mexc_trade_sync.py  multi_source_fetcher.py  otc_premium_tracker.py  power_law_cache_service.py  primary_source_fetcher.py  realtime_price_cache.py  sherlock_macro_loader.py  source_orchestrator.py  tge_data_loaders.py  tge_snapshot_archiver.py  token_identity_lock.py  token_lookup.py  vc_database.py  webfetch_helpers.py  websocket_price_stream.py
src/execution/: __init__.py  blofin_bridge.py  context_token_store.py  cross_venue_arb_engine.py  cross_venue_arb_monitor.py  execution_score.py  kalshi_client.py  lifecycle_breaker_state.py  lifecycle_shadow.py  monitor.py  reconciliation.py  state_manager.py  state_manager.py.orig  v2_models.py  venue_adapter.py
src/governance/: __init__.py  contracts.py  gap_protection.py  kill_switch.py  override.py  pnl_aggregator.py  position_limits.py  sharpe_service.py
src/monitoring/: CLAUDE.md  __init__.py  active_token_queue.py  channel_telemetry.py  channel_telemetry_continuity.py  condition_check_functions.py  data_source_health.py  endpoint_usage_tracker.py  health.py  heartbeat_checks.py  heartbeat_discord.py  market_regime_classifier.py  playbook_condition_checker.py  refresh_slo.py  service_restart_slo.py  startup_validator.py  system_doctor.py  the_watcher.py  vps_health_monitor.py
src/ta/: CLAUDE.md  __init__.py  cipher_engine.py  computed_ta_builder.py  discovery_ta.py  outcome_tracker.py
src/trading_shared/: allocator.py  binance_aggression.py  capital_models.py  cex_lead.py  governor.py  intent_logger.py  models.py  rate_limiter.py  realtime_risk_ledger.py  risk_ledger.py  session_context.py  unified_allocator.py
src/utils/: CLAUDE.md  __init__.py  agent_execution_logger.py  api_cost_guard.py  atomic_state.py  atomic_write.py  btc_cache.py  config.py  config_helper.py  dotenv_safe.py  exception_handler.py  feature_cache.py  feature_flags.py  graceful_degradation.py  latency_logger.py  llm_cache.py  logger.py  network.py  network_resilience.py  path_setup.py  rate_limiter.py  redaction.py  redis_cache.py  request_batcher.py  sentry_config.py  severity.py  soul_generator.py  (+4 more)
(+188 files in other folders)
