[project]
name = "dacle"
version = "0.1.0"
description = "David's Automated Crypto Learning Engine - Second Brain Knowledge Management System"
authors = [
    {name = "Alex", email = "alex@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "discord.py>=2.3.2",
    "supabase>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "redis>=5.0.1",
    "anthropic>=0.7.7",
    "numpy>=1.26.2",
    "httpx>=0.25.2",
    "pydantic>=2.5.2",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "PyJWT>=2.10.1",
    "feedparser>=6.0.10",  # For Coinbase Blog RSS parsing
    "python-telegram-bot>=20.0",  # Telegram Entry Timer Bot
    "ccxt>=4.0.0",  # Exchange integration for TA data
    "pycoingecko>=3.1.0",  # 7-Index tracking (USDT.D, BTC.D, etc.)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
