[project]
name = "dacle-core"
version = "0.1.0"
description = "Shared core package for dacle-polymarket and dacle-lighter"
authors = [{name = "Alex", email = "alex@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "redis[hiredis]>=5.0.1",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "scipy>=1.11.0",
    "tenacity>=8.2.3",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "orjson>=3.9.0",
    "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dacle_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
